# inkjet-printer

./: .gitignore  Encoder_Skipping.xlsx  README.md  Variable DPI.epxyz  camera_calibration.xlsx  export.sh  filling.js  printhead_angle.epxyz  required_layers.epxyz  slice.mjs
FPC_Adapter/: .gitignore  FPC_Adapter.kicad_pcb  FPC_Adapter.kicad_prl  FPC_Adapter.kicad_pro  FPC_Adapter.kicad_sch  fp-lib-table
Heatbed/: .gitignore  Heatbed.kicad_pcb  Heatbed.kicad_prl  Heatbed.kicad_pro  Heatbed.kicad_sch
Strobe/: .gitignore  Strobe.kicad_pcb  Strobe.kicad_prl  Strobe.kicad_pro  Strobe.kicad_sch  Strobe.xml  circuit-20231018-1834.circuitjs.txt  ne555.circuitjs.txt  sometries.circuitjs.txt
Xaar128-Adapter/: .gitignore  Xaar128-Adapter.csv  (+4 more)
inkjet-printer-zephyr/inkjet-printer/app/: CMakeLists.txt  prj.conf  sample.yaml
inkjet-printer-zephyr/inkjet-printer/app/boards/: esp32_devkitc_wroom.overlay  nucleo_h743zi.overlay  nucleo_h7a3zi_q.overlay
inkjet-printer-zephyr/inkjet-printer/app/include/: dropwatcher_light.h  failure_handling.h  moving_average.h  pressure_control.h  pressure_control_algorithm.h  print_control.h  printer_system_smf.h  printhead_routines.h  regulator.h
inkjet-printer-zephyr/inkjet-printer/app/src/: critical_error.c  dropwatcher_light.c  failure_handling.c  main.c  moving_average.c  pressure_control.c  pressure_control.proto  pressure_control_algorithm.c  print_control.c  print_control.proto  printer_request.options  printer_request.proto  printer_system_smf.c  printer_system_state.proto  printer_system_state_response.proto  printhead_routines.c  regulator.c  waveform_control.proto  webusb.c  webusb_initialize.c
inkjet-printer-zephyr/inkjet-printer/tests/lib/inkjetcontrol/: .gitignore  CMakeLists.txt  README.md  prj.conf  testcase.yaml
inkjet-printer-zephyr/inkjet-printer/tests/lib/inkjetcontrol/src/: lines_to_print.c  main.c  once_per_tick.c  once_per_x_ticks.c  test_pattern.c  x_per_tick.c  x_per_x_ticks.c
(+545 files in other folders)
